--- a/CaterBll/CaterBll.csproj
+++ b/CaterBll/CaterBll.csproj
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ManagerInfoBll.cs" />
+    <Compile Include="MemberInfoBll.cs" />
+    <Compile Include="MemberTypeInfoBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
