--- a/CaterDal/CaterDal.csproj
+++ b/CaterDal/CaterDal.csproj
@@ -61,6 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ManagerInfoDal.cs" />
+    <Compile Include="MemberInfoDal.cs" />
+    <Compile Include="MemberTypeInfoDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqliteHelper.cs" />
   </ItemGroup>
