--- a/CaterModel/CaterModel.csproj
+++ b/CaterModel/CaterModel.csproj
@@ -41,7 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LoginState.cs" />
     <Compile Include="ManagerInfo.cs" />
+    <Compile Include="MemberInfo.cs" />
+    <Compile Include="MemberTypeInfo.cs" />
+    <Compile Include="OtherClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
