--- a/CaterModel/CaterModel.csproj
+++ b/CaterModel/CaterModel.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DishInfo.cs" />
+    <Compile Include="DishTypeInfo.cs" />
     <Compile Include="LoginState.cs" />
     <Compile Include="ManagerInfo.cs" />
     <Compile Include="MemberInfo.cs" />
