--- a/CaterBll/CaterBll.csproj
+++ b/CaterBll/CaterBll.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DishInfoBll.cs" />
     <Compile Include="DishTypeInfoBll.cs" />
     <Compile Include="ManagerInfoBll.cs" />
     <Compile Include="MemberInfoBll.cs" />
