Table and Hall Finished

--- a/CaterBll/CaterBll.csproj
+++ b/CaterBll/CaterBll.csproj
@@ -43,10 +43,12 @@
   <ItemGroup>
     <Compile Include="DishInfoBll.cs" />
     <Compile Include="DishTypeInfoBll.cs" />
+    <Compile Include="HallInfoBll.cs" />
     <Compile Include="ManagerInfoBll.cs" />
     <Compile Include="MemberInfoBll.cs" />
     <Compile Include="MemberTypeInfoBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableInfoBll.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CaterCommon\CaterCommon.csproj">
