--- a/CaterDal/CaterDal.csproj
+++ b/CaterDal/CaterDal.csproj
@@ -62,11 +62,13 @@
   <ItemGroup>
     <Compile Include="DishInfoDal.cs" />
     <Compile Include="DishTypeInfoDal.cs" />
+    <Compile Include="HallInfoDal.cs" />
     <Compile Include="ManagerInfoDal.cs" />
     <Compile Include="MemberInfoDal.cs" />
     <Compile Include="MemberTypeInfoDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqliteHelper.cs" />
+    <Compile Include="TableInfoDal.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CaterCommon\CaterCommon.csproj">
