--- a/CaterModel/CaterModel.csproj
+++ b/CaterModel/CaterModel.csproj
@@ -43,12 +43,14 @@
   <ItemGroup>
     <Compile Include="DishInfo.cs" />
     <Compile Include="DishTypeInfo.cs" />
+    <Compile Include="HallInfo.cs" />
     <Compile Include="LoginState.cs" />
     <Compile Include="ManagerInfo.cs" />
     <Compile Include="MemberInfo.cs" />
     <Compile Include="MemberTypeInfo.cs" />
     <Compile Include="OtherClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
