--- a/CaterUI/CaterUI.csproj
+++ b/CaterUI/CaterUI.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DdlModel.cs" />
     <Compile Include="FormDishInfo.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +63,12 @@
     </Compile>
     <Compile Include="FormDishTypeInfo.Designer.cs">
       <DependentUpon>FormDishTypeInfo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormHallInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormHallInfo.Designer.cs">
+      <DependentUpon>FormHallInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="FormLogin.cs">
       <SubType>Form</SubType>
@@ -93,6 +100,12 @@
     <Compile Include="FormMemberTypeInfo.Designer.cs">
       <DependentUpon>FormMemberTypeInfo.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTableInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTableInfo.Designer.cs">
+      <DependentUpon>FormTableInfo.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FormDishInfo.resx">
@@ -100,6 +113,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormDishTypeInfo.resx">
       <DependentUpon>FormDishTypeInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormHallInfo.resx">
+      <DependentUpon>FormHallInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormLogin.resx">
       <DependentUpon>FormLogin.cs</DependentUpon>
@@ -115,6 +131,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormMemberTypeInfo.resx">
       <DependentUpon>FormMemberTypeInfo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTableInfo.resx">
+      <DependentUpon>FormTableInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
