--- a/CaterBll/CaterBll.csproj
+++ b/CaterBll/CaterBll.csproj
@@ -47,6 +47,7 @@
     <Compile Include="ManagerInfoBll.cs" />
     <Compile Include="MemberInfoBll.cs" />
     <Compile Include="MemberTypeInfoBll.cs" />
+    <Compile Include="OrderInfoBll.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableInfoBll.cs" />
   </ItemGroup>
