--- a/CaterDal/CaterDal.csproj
+++ b/CaterDal/CaterDal.csproj
@@ -66,6 +66,7 @@
     <Compile Include="ManagerInfoDal.cs" />
     <Compile Include="MemberInfoDal.cs" />
     <Compile Include="MemberTypeInfoDal.cs" />
+    <Compile Include="OrderInfoDal.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqliteHelper.cs" />
     <Compile Include="TableInfoDal.cs" />
