--- a/CaterModel/CaterModel.csproj
+++ b/CaterModel/CaterModel.csproj
@@ -48,6 +48,8 @@
     <Compile Include="ManagerInfo.cs" />
     <Compile Include="MemberInfo.cs" />
     <Compile Include="MemberTypeInfo.cs" />
+    <Compile Include="OrderDetailInfo.cs" />
+    <Compile Include="OrderInfo.cs" />
     <Compile Include="OtherClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TableInfo.cs" />
